# front

./: .dockerignore  .drone.yml  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  csv.doc  docker-compose.dev.yml  docker-compose.export.yml  docker-compose.prod.yml  docker-compose.yml  down.sh  forms.odt  mitglied-werden-firma.doc  next-seo.config.js  next.config.js  notes.org  package-lock.json  package.json  psql_to_csv.sh  renovate.json  shell.nix  tailwind.config.js  text.doc  todo.org  up.sh
.github/: dependabot.yml
back/: database-backup.sh  database-restore.sh  directus.prod.yml  docker-compose.dev.yml  docker-compose.prod.yml  dump_04-06-2021_12_08_37.sql  filebrowser.prod.yml  nocodb.prod.yml
components/: blog-index.js  blog.js  checkbox-satzung-beitragsordnung.js  checkbox.js  cleverreach.js  countries.js  firma-data-slim.js  firma-data.js  footer.js  form-group-aenderung.js  form-group-firma-ap.js  form-group-firma-beitrag.js  form-group-firma-consent.js  form-group-firma-feuerwerk-net.js  form-group-firma-freitext.js  form-group-firma-sepa.js  form-group-firma-slim.js  form-group-firma-t.js  form-group-firma.js  form-group-mitglied-beitrag.js  form-group-mitglied-consent.js  form-group-mitglied-feuerwerk-net.js  form-group-mitglied-feuerwerk.js  form-group-mitglied-foerder-only-beitrag.js  form-group-mitglied-freitext.js  form-group-mitglied-nummer.js  form-group-mitglied-sepa.js  form-group-mitglied-versicherung.js  form-group-mitglied.js  grid.js  grund-foerder-data.js  (+15 more)
export/: Dockerfile  Pipfile  docker-compose.yml  pyproject.toml  to_csv.py
(+157 files in other folders)
