[tool.poetry]
name = "bvpk-export"
version = "0.1.0"
description = ""
authors = ["linozen <linus@sehn.tech>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
requests = "^2.26.0"
psycopg = "^3.0b1"

[tool.poetry.dev-dependencies]
pandas-stubs = "^1.2.0"

[tool.pyright]
venvPath = "/home/lino/.cache/pypoetry/virtualenvs/"
venv = "bvpk-export-TahenI6G-py3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
